<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.devipriya.reportcard.activities.SubjectsEntryActivity">

    <LinearLayout
        android:id="@+id/dpSubjectSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dpInputEditText"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_subject"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:maxLength="20"
            android:digits="@string/limit_edit_text"/>

        <Button
            android:id="@+id/dpSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>
    </LinearLayout>

    <ListView
        android:id="@+id/dpDynamicListView"
        android:layout_below="@+id/dpSubjectSave"
        android:layout_marginTop="@dimen/list_top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@android:color/black"
        android:dividerHeight="@dimen/divider_height"
        android:background="@drawable/border"/>

</RelativeLayout>
