<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.devipriya.reportcard.activities.TestsEntryActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dpTestNameInput"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/test_edit_text_margin"
        android:width="@dimen/test_edit_text_width"
        android:hint="@string/enter_test"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:maxLength="20"
        android:digits="@string/limit_edit_text"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dpMaxMarksInput"
        android:width="@dimen/test_edit_text_width"
        android:layout_below="@+id/dpTestNameInput"
        android:layout_alignLeft="@+id/dpTestNameInput"
        android:layout_alignStart="@+id/dpTestNameInput"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/dpSaveButton"
        android:layout_below="@+id/dpMaxMarksInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/linear_layout_padding" />


    <ListView
        android:id="@+id/dpDynamicListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dpSaveButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/list_top_margin"
        android:divider="@android:color/black"
        android:dividerHeight="@dimen/divider_height"
        android:background="@drawable/border"/>


</RelativeLayout>
